Agrega soporte email
Signed-off-by: Juan Pablo Menichetti <jpmenichetti@sisdef.cl>

--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+	<img class="title_img" src="img/top.png"/>
 	<img class="title_img" src="img/indice.png"/>
     <div class="indice">
 		<a class="indice" href="seccion_0.html">INTRODUCCION</a>
@@ -71,6 +72,9 @@
     </div>
     <div class="indice">
 		<a class="indice" href="seccion_5.html">NUESTROS DERECHOS</a>
+    </div>
+    <div class="indice">
+		<a class="indice" href="acerca_de.html">Autores y agradecimientos</a>
     </div>
 	<img class="title_img" src="img/bottom.png"/>
     <script type="text/javascript" src="cordova.js"></script>
