--- a/www/seccion_3.html
+++ b/www/seccion_3.html
@@ -1,2 +1,165 @@
+<!DOCTYPE html>
 
-VALORES
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Ser Guía y Subguía de Patrulla</title>
+</head>
+
+<body class="seccion3">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
+	<img class="title_img" src="img/img_seccion_3.png"/>
+	<div id="full_content">
+
+
+	<div class="intro3">
+		Valores
+	</div>
+	<p class="content">
+		La Ley Guía y Scout representa <span class="importante3"><b>nuestros valores</b></span> y 
+		la persona que esperamos ser. Y la promesa 
+		es el <span class="importante3"><b>compromiso voluntario</b></span> que hemos tomado para 
+		guiar nuestra vida <span class="importante3">fuera y dentro del Movimiento</span> con base en estos valores. Esto no significa que seamos personas perfectas, 
+		sino que nos hemos comprometido a intentar con todas nuestras ganas vivir cada 
+		artículo de la Ley. 
+	</p>
+	<p class="content">
+		La promesa la haremos simplemente cuando nos sintamos listas y listos para hacerla. Lo conversamos 
+		con <span class="importante3"><b>nuestra Patrulla</b></span> y, de esa forma, en el 
+		<span class="importante3"><b>Consejo de Unidad</b></span> podremos calendarizar la ceremonia. 
+		Es importante que recordemos que no hay requisitos para realizar nuestra promesa, no tenemos 
+		que cumplir con una lista de atributos ni sortear pruebas, sino que tenemos que tener las 
+		ganas de dar lo mejor de nosotras y nosotros para vivir la Ley.
+	</p>
+	<div class="intro3">
+		La Ley
+	</div>
+	<p class="content">
+		Nuestra Ley dice que:
+	</p>
+	<p class="content">
+		<table>
+		<tr>
+		<td>
+			La Guía:
+			<ul>
+			<li>Es digna de confianza</li>
+			<li>Es leal</li>
+			<li>Sirve sin esperar recompensa</li>
+			<li><li>Comparte con todas y todos</li>
+			<li>Es alegre y cordial</li>
+			<li>Protege la vida y la naturaleza</li>
+			<li>Es responsable y nada hace a medias</li>
+			<li>Es optimista</li>
+			<li>Cuida las cosas y valora el trabajo</li>
+			<li>Es coherente en pensamiento, palabra y acción</li>
+			</ul>
+		</td>
+		<td>
+			El Scout:
+			<ul>
+			<li>Es digno de confianza</li>
+			<li>Es leal</li>
+			<li>Sirve sin esperar recompensa</li>
+			<li>Comparte con todas y todos</li>
+			<li>Es alegre y cordial</li>
+			<li>Protege la vida y la naturaleza</li>
+			<li>Es responsable y nada hace a medias</li>
+			<li>Es optimista</li>
+			<li>Cuida las cosas y valora el trabajo</li>
+			<li>Es coherente en pensamiento, palabra y acción</li>
+			</ul>
+		</td>
+		</tr>
+		</table>
+	</p>
+	<div class="intro3">
+		La Promesa
+	</div>
+	<p class="content">
+		A través de la promesa nos comprometemos a hacer lo mejor de nosotras y nosotros. 
+	</p>
+	<p class="content_centered">
+		<b>
+		Por mi honor prometo<br/>
+		Hacer cuanto de mí dependa para<br/>
+		buscar a Dios,<br/>
+		amar a mi familia,<br/>
+		ayudar a los demás,<br/>
+		servir a mi País, <br/>
+		trabajar por la paz<br/>
+		y vivir la Ley Guía y Scout.<br/>
+		</b>
+	</p>
+	<p class="content">
+		Además, algo que siempre nos ayudará a mantener presente nuestra Ley y Promesa es nuestro lema, ya que nos recuerda el compromiso que hemos hecho. Cuando lo decimos, es casi una renovación de nuestra promesa, por eso lo dejamos para momentos importantes o para dar comienzo a un nuevo día recordando nuestro compromiso.
+	</p>
+	<p class="content_centered">
+        <b><span class="importante3">¡Siempre Listas! ¡Siempre Listos!</span></b>
+	</p>
+	<p class="content">
+		Por otro lado, nuestra Patrulla es un lugar donde la amistad nos permite resolver nuestros conflictos siempre teniendo en vista nuestra Ley y Promesa. En la Patrulla podremos aprender sobre la Ley, hablar sobre el significado que cada uno o una le da a la Promesas en sus vidas y conversar sobre cómo la vivimos. Gran parte de vivir la Ley y la Promesa está relacionado a la Buena Acción. Hacer buenas acciones es concretar nuestro compromiso, hacerlo real, demostrarlo.
+	</p>
+	<img class="title_img" src="img/img_seccion_3_1.png"/>
+	<p class="content">
+		Cuando hablamos de progresión personal nos referimos a nuestro crecimiento y el logro de objetivos 
+		que nos proponemos durante el tiempo que estamos en el Movimiento. No importa a qué edad 
+		llegamos al Movimiento, dentro y fuera de él estamos siempre 
+		<span class="importante3">aprendiendo y creciendo</span>. 
+	</p>
+	<p class="content">
+		La muestra concreta de cuánto hemos crecido es cuando llega el momento de 
+		cambiar una <span class="importante3">insignia de progresión</span> de nuestra camisa, 
+		con esto mostramos que ya hemos dejado una etapa atrás y es momento de vivir una nueva. 
+		Es por esto que cuando comenzamos a vivir una nueva etapa, nuestra insignia de progresión 
+		se convierte en una motivación y también un recordatorio del momento que estamos viviendo.
+	</p>
+	<p class="content">
+		<span class="importante3">Nuestro crecimiento es único</span> y sólo nosotras y nosotros 
+		sabemos y sentimos los cambios que hemos tenido. Sin embargo, habrá veces en que nos costará 
+		ver nuestros propios cambios o aquellas cosas que aún tenemos por mejorar. Ahí se vuelve 
+		indispensable nuestra Patrulla y dirigentes o guiadoras, quienes 
+		<span class="importante3">nos acompañan en nuestro crecimiento y nos motivarán a crecer</span>,
+		nos darán ejemplos de cuánto hemos mejorado y nos ayudarán a ver lo que nos queda por avanzar. 
+		Aun cuando nos acompañan, no deciden por nosotras o nosotros, sino que conversamos y 
+		llegamos a consensos sobre nuestro desarrollo y la <span class="importante">etapa</span> en 
+		la que nos encontramos. 
+	</p>
+	<p class="content">
+		Parte de nuestro rol como guías y subguías de Patrulla es apoyar a otras personas en su crecimiento, 
+		algunas de las cosas que podemos hacer para ayudar es:
+	</p>
+	<p class="content">
+		<b>Reconocer el esfuerzo, las ganas y motivar la participación de todas y todos</b>, de esta 
+		manera tendremos oportunidades de mejorar y aprender. 
+	</p>
+	<p class="content">
+		<b>Aplaudir las mejoras y fortalezas</b>, si alguien ha puesto su esfuerzo y ha mejorado 
+		una actitud, es importante que le brindemos apoyo y motivemos, igual que golondrinas y 
+		lobatos, a ser <span class="importante3">¡siempre mejores!</span> 
+	</p>
+	<p class="content">
+		<b>Tomar la iniciativa cuando se trata de identificar qué nos falta por mejorar</b>, a veces 
+		es difícil asumir aquello que más nos cuesta, pero si damos el ejemplo como guías y subguías 
+		de Patrulla podemos incentivar que el resto también lo haga. 
+	</p>
+	<p class="content">
+		Y por último, lo más importante, es que recuerdes 
+		<span class="importante3">que crecer y aprender también es parte de nuestra aventura</span>. 
+		Mantener una actitud positiva y tener disposición a aprender nos hará excelentes guías y scouts. 
+	</p>
+	<img class="title_img" src="img/img_diario_bitacora.png"/>
+	</div>
+	<script>
+		configureGestures("full_content","seccion_2.html","seccion_4.html");
+	</script>
+
+</body>
+</html>
