--- a/www/seccion_4.html
+++ b/www/seccion_4.html
@@ -1,2 +1,283 @@
+<!DOCTYPE html>
 
-OTROS TEMAS DE INTERES
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Ser Guía y Subguía de Patrulla</title>
+</head>
+
+<body class="seccion4">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+	<img class="title_img" src="img/img_seccion_4.png"/>
+	<div id="full_content">
+
+	<p class="content">
+		Además de los temas que ya hemos tratado, hay otros que nos interesan por su relación con el 
+		Movimiento, porque tienen utilidad en el día a día de nuestra Patrulla o simplemente porque 
+		nos gustaría saber de ellos. En las siguientes láminas encontraremos varios de estos temas, 
+		algunos de ellos nos servirán para nuestras actividades con nuestras Patrullas y Unidades, 
+		e incluso se pueden convertir en un proyecto que hagamos propio. Los temas siguen el 
+		siguiente orden: especialidades, ceremonias, seguridad y riesgo, otras actividades para hacer 
+		con mi Patrulla y Unidad.  
+	</p>
+	<img class="title_img" src="img/img_seccion_4_1.png"/>
+	<p class="content">
+		Las especialidades son actividades que hacemos de manera voluntaria y que responden a nuestros 
+		intereses personales. La idea es que a través de éstas desarrollemos nuestras habilidades innatas, 
+		es decir, aquellas que tenemos desde que nacimos, practiquemos algo que ya nos gusta hacer o 
+		aprendamos una afición que nos llame la atención. A través de una especialidad podemos 
+		encontrar nuestros gustos y enseñar estos a los demás, esto también es servir. 
+	</p>
+	<p class="content">
+		Cuando queramos desarrollar una especialidad vamos a necesitar ayuda de una persona que sea 
+		<span class="importante4">monitor</span>, quien nos va a apoyar en este proceso. Puede ser una guiadora 
+		o dirigente de nuestra Unidad o alguien que tenga capacitación o experiencia en el tema de 
+		nuestra especialidad. Una vez que elijamos a alguien como monitor o monitora debemos contarle a 
+		nuestras guiadoras o dirigentes.
+	</p>
+	<p class="content">
+		Al momento de elegir nuestra especialidad nos daremos cuenta de que varias de ellas se pueden 
+		agrupar en algo que llamamos <span class="importante4">Campos de Interés</span>. Son 5:
+		<ul class="content">
+		<li>Ciencia y Tecnología</li>
+		<li>Arte, Expresión y Cultura</li>
+		<li>Vida en la Naturaleza</li>
+		<li>Deporte</li>
+		<li>Servicio.</li>
+		</ul>
+	</p>
+	<p class="content">
+		Además, habrán algunas especialidades que corresponden a más de un campo. 
+	</p>
+	<p class="content">
+		No es necesario que el proceso de una especialidad nos lleve mucho tiempo, de hecho, 
+		entre <span class="importante4">2 y 3 meses</span> debiésemos finalizar el desarrollo de 
+		nuestra especialidad. 
+	</p>
+	<p class="content">
+		Por último, es importante que nuestra especialidad nos lleve a:
+	</p>
+	<img class="title_img" src="img/img_proc_especialidad.png"/>
+	<p class="content">
+		<span class="importante4">Conocer</span> más del tema que nos llevó en un principio a 
+		hacer nuestra especialidad.
+	</p>
+	<p class="content">
+		<span class="importante4">Explorar</span> y profundizar nuestro interés, descubriendo 
+		cosas que antes no sabíamos.
+	</p>
+	<p class="content">
+		<span class="importante4">Hacer</span> cosas nuevas, tomar desafíos y aprender algo nuevo.
+	</p>
+	<p class="content">
+		<span class="importante4">Servir</span> a los demás a través de lo nuevo que aprendimos, 
+		mostrarles a otros algo novedoso y que entusiasme a descubrir cosas nuevas.
+	</p>
+	
+	
+	<img class="title_img" src="img/img_seccion_4_2.png"/>
+	<p class="content">
+		Algo que tenemos que mantener presente es que nuestras ceremonias deben ser 
+		<span class="importante4">breves, significativas, dinámicas y propias</span> de 
+		quién recibe la ceremonia.
+	</p>
+	<p class="content">
+		Lo más importante es que somos <span class="importante4">protagonistas</span> de nuestras 
+		ceremonias, en esos momentos se tiene que ver reflejado los gustos e individualidades de 
+		la persona de la celebración, conservando la solemnidad propia de la ocasión.  
+	</p>
+	<p class="content">
+		Tampoco olvidemos que todas nuestras ceremonias deben ser <span class="importante4">seguras</span>
+		para nosotras o nosotros y nuestro entorno. Ninguna ceremonia puede atentar contra nuestra 
+		integridad física o psicológica, ni tampoco producir un daño a nuestro ambiente. 
+	</p>
+	
+	
+	<img class="title_img" src="img/img_seccion_4_3.png"/>
+	<p class="content">
+		Tal como lo vimos en la <span class="importante4">preparación de actividades</span>, es vital 
+		que consideremos medidas de <span class="importante4">seguridad</span> y prevención para nuestras 
+		actividades. Para esto, cuando pensemos en una actividad tenemos que considerar aquellas cosas 
+		del ambiente o acciones que podrían resultar en un accidente.
+	</p>
+	<p class="content">	
+		<span class="importante4">Prevenir</span>
+		es la clave para no tener accidentes porque los evitamos antes de que sucedan. La idea es que 
+		saquemos o cambiemos la actividad si algo resulta demasiado riesgoso, si el cambio no es posible 
+		(por ejemplo, nuestro lugar para las actividades tiene un escalón donde nos podríamos torcer 
+		el pie, pero no podemos irnos a otro lugar ni sacar el escalón) 
+		<span class="importante4">pongamos mucha atención</span> a eso que hace que nuestra actividad 
+		sea peligrosa.
+	</p>
+	<p class="content">	
+		Marquémoslo con algo fluorescente, hagamos carteles, 
+		asegurémonos de <span class="importante4">informar</span> a todas y todos para evitar accidentes. 
+		Cada cierto tiempo de la actividad <span class="importante4">recordemos</span> sobre el peligro, 
+		para que la diversión continúe sin accidentes.
+	</p>
+	<p class="content">	
+		Por último, y porque aun cuando hagamos todo 
+		podría suceder un accidente, <span class="importante4">estemos listas y listos para ayudar</span>. 
+		Si alguna guía o scout tiene un accidente, llamemos inmediatamente a los adultos que nos 
+		está acompañando, despejemos el lugar (es típico que todo el mundo se abalanza a ver lo 
+		sucedido, evitemos que esto suceda) y sigamos las instrucciones que nos dan nuestros 
+		dirigentes o guiadoras.
+	</p>
+	
+	
+	<img class="title_img" src="img/img_seccion_4_4.png"/>
+	<div class="intro4">Programas internacionales</div>
+	<p class="content">
+		Desde hace un tiempo que la Asociación ha ido presentando Programas que vienen del Movimiento 
+		Scout y Guía a nivel mundial para que las podamos hacer con nuestras Patrullas y Unidades. 
+		Acá encontraremos una lista rápida de los programas internacionales que son para guías y 
+		scouts, para que les demos un vistazo y nos motivemos con el desafío de participar en uno. 
+		Cada Programa tiene un tema específico, desafío e insignias especiales.
+	</p>
+	<p class="content">
+		<span class="importante4"><b>Programa Scout Mundial del Medioambiente</b></span>: Es un set de 
+		actividades y proyectos que nos enseñan a implementar prácticas medioambientales apropiadas 
+		para todas las especies del planeta y a promover la educación medioambiental. Podemos 
+		pedir información al mail:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="programamedioambiente">programamedioambiente@guiasyscoutschile.cl</a>
+	<script>
+		Hammer(document.getElementById('programamedioambiente')).on("tap", function(event) {
+			window.open("mailto:programamedioambiente@guiasyscoutschile.cl?subject=Quiero%20saber%20mas","_system");
+		});
+	</script>
+	</p>
+	<p class="content">
+		o a través del Facebook:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="fb_programamedioambiente">Programa Scout Medio Ambiente Chile</a>
+		<script>
+			Hammer(document.getElementById('fb_programamedioambiente')).on("tap", function(event) {
+				window.open("https://www.facebook.com/ProgramaScoutMedioAmbienteChile/","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		<span class="importante4"><b>Navegación Inteligente</b></span>: Es un set de actividades con el que 
+		aprenderemos sobre seguridad en la web y mantener conexiones positivas y seguras en línea. También 
+		conoceremos nuestros derechos como usuarios de Internet. Podemos pedir información al 
+		mail:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="navegacioninteligente">navegacioninteligente@guiasyscoutschile.cl</a>
+		<script>
+			Hammer(document.getElementById('navegacioninteligente')).on("tap", function(event) {
+				window.open("mailto:navegacioninteligente@guiasyscoutschile.cl?subject=Quiero%20saber%20mas","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		o a través del Facebook:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="fb_navegacioninteligente">Navegación Inteligente Chile</a>
+		<script>
+			Hammer(document.getElementById('fb_navegacioninteligente')).on("tap", function(event) {
+				window.open("https://www.facebook.com/navegacioninteligentechile/","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		<span class="importante4"><b>Libre De Ser Quien Soy</b></span>: Es un programa que busca que 
+		derribemos el mito de la imagen del hombre y la mujer perfecta, aumentando nuestra autoestima 
+		y confianza en nuestra apariencia física. Podemos pedir información al 
+		mail:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="libredeserquiensoy">libredeserquiensoy@guiasyscoutschile.cl</a>
+		<script>
+			Hammer(document.getElementById('libredeserquiensoy')).on("tap", function(event) {
+				window.open("mailto:libredeserquiensoy@guiasyscoutschile.cl?subject=Quiero%20saber%20mas","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		o a través del Facebook: 
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="fb_libredeserquiensoy">Libre de Ser Quien Soy Chile</a>
+		<script>
+			Hammer(document.getElementById('fb_libredeserquiensoy')).on("tap", function(event) {
+				window.open("https://www.facebook.com/libredeserquiensoychile/","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		<span class="importante4"><b>Mensajeros de la Paz</b></span>: Es un programa que promueve que 
+		hagamos acciones de servicio o colaboración a la comunidad, donde somos nosotras y nosotros 
+		quienes pensamos, diseñamos y ejecutamos nuestros proyectos de servicio. Podemos pedir 
+		información al mail:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="mensajerosdelapaz">mensajerosdelapaz@guiasyscoutschile.cl</a>
+		<script>
+			Hammer(document.getElementById('mensajerosdelapaz')).on("tap", function(event) {
+				window.open("mailto:mensajerosdelapaz@guiasyscoutschile.cl?subject=Quiero%20saber%20mas","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		o a través del Facebook: 		
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="fb_mensajerosdelapaz">Mensajeros de la Paz Chile</a>
+		<script>
+			Hammer(document.getElementById('fb_mensajerosdelapaz')).on("tap", function(event) {
+				window.open("https://www.facebook.com/mensajerosdelapazchile/","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		<span class="importante4"><b>Alto a la Violencia</b></span>: Es un proyecto que busca eliminar 
+		la violencia contra las niñas y mujeres de todo el mundo. Nos enseña a unirnos para hacer del 
+		planeta un lugar más justo para todas y todos. Podemos pedir información al 
+		mail:
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="altoalaviolencia">altoalaviolencia@guiasyscoutschile.cl</a>
+		<script>
+			Hammer(document.getElementById('altoalaviolencia')).on("tap", function(event) {
+				window.open("mailto:altoalaviolencia@guiasyscoutschile.cl?subject=Quiero%20saber%20mas","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		o a través del Facebook: 
+	</p>
+	<p class="content_centered">
+		<a class="seccion4" id="fb_altoalaviolencia">Alto a la Violencia Chile</a>.
+		<script>
+			Hammer(document.getElementById('fb_altoalaviolencia')).on("tap", function(event) {
+				window.open("https://www.facebook.com/AltoALaViolenciaChile/","_system");
+			});
+		</script>
+	</p>
+	<p class="content">
+		No nos quedemos fuera: busquemos información, pidámosle a nuestras guiadoras y dirigentes 
+		que averigüen
+	</p>
+	<p class="content_centered">
+        <b><span class="importante4">¡Seamos quienes hacen del mundo un lugar mejor!</span></b>
+	</p>
+	<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>&nbsp;</p>
+	</div>
+	<script>
+		configureGestures("full_content","seccion_3.html","seccion_5.html");
+	</script>
+</body>
+</html>
