--- a/www/seccion_5.html
+++ b/www/seccion_5.html
@@ -1,2 +1,84 @@
+<!DOCTYPE html>
 
-NUESTROS DERECHOS
+<html>
+
+<head>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <title>Ser Guía y Subguía de Patrulla</title>
+</head>
+
+<body class="seccion5">
+    <script type="text/javascript" src="js/hammer.min.js"></script>
+    <script type="text/javascript" src="js/gestures.js"></script>
+	<img class="title_img" src="img/img_seccion_5.png"/>
+	<div id="full_content">
+
+	<p class="content">
+		La Asociación de Guías y Scouts de Chile está comprometida a:
+		<ul class="content">
+		<li class="seccion5">Promover nuestros derechos. Que todas y todos los conozcan y a que nuestras actividades, y todo 
+		lo que hacemos, nos permita vivirlos permanentemente.</li>
+		<li class="seccion5">Prevenir para que nada malo nos pase y que nuestros derechos sean siempre respetados por todas 
+		y todos: guiadoras, dirigentes, familias, otras guías y scouts, y con quienes interactuemos 
+		en el Movimiento.</li>
+		<li class="seccion5">Protegernos  en caso de que alguien pase a llevar nuestros derechos. </li>
+		</ul>
+	</p>
+	<p class="content">
+		Al ser nuestros derechos, tenemos que conocerlos y hacerlos valer. Por eso los encontramos acá, 
+		para que los revisemos, conozcamos y entendamos:
+	</p>
+	<p class="content">
+		<span class="importante5"><b>Los niños, niñas y adolescentes tenemos derecho:</b></span>
+		<ul class="content">
+		<li class="seccion5">A la vida, el desarrollo, la participación y la protección.</li>
+		<li class="seccion5">A tener un nombre y una nacionalidad.</li>
+		<li class="seccion5">A saber quiénes son nuestros papás y a no ser separados de ellos.</li>
+		<li class="seccion5">A que el Estado garantice a nuestros padres la posibilidad de cumplir con sus 
+		deberes y derechos.</li>
+		<li class="seccion5">A crecer sanos física, mental y espiritualmente.</li>
+		<li class="seccion5">A que se respete nuestra vida privada.</li>
+		<li class="seccion5">A tener nuestra propia cultura, idioma y religión.</li>
+		<li class="seccion5">A pedir y difundir la información necesaria que promueva nuestro bienestar y nuestro 
+		desarrollo como personas.</li>
+		<li class="seccion5">A que nuestros intereses sean lo primero a tenerse en cuenta en cada tema que nos afecte, 
+		tanto en la escuela, los hospitales, ante los jueces, diputados, senadores u otras autoridades.</li>
+		<li class="seccion5">A expresarnos libremente, a ser escuchados y a que nuestra opinión sea tomada en cuenta. </li>
+		<li class="seccion5">A no ser discriminados por el solo hecho de ser diferentes a los demás.</li>
+		<li class="seccion5">A tener a quien recurrir en caso de que nos maltraten o nos hagan daño.</li>
+		<li class="seccion5">A no tener que realizar trabajos peligrosos ni actividades que afecten nuestra salud o 
+		entorpezcan nuestra educación y desarrollo.</li>
+		<li class="seccion5">A que nadie haga con nuestros cuerpos cosas que no queremos.</li>
+		<li class="seccion5">A aprender todo aquello que desarrolle al máximo nuestra personalidad y nuestras capacidades 
+		intelectuales, físicas y sociales.</li>
+		<li class="seccion5">A tener una vida digna y plena, más aún si tenemos una discapacidad física o mental.</li>
+		<li class="seccion5">A descansar, jugar y practicar deportes.</li>
+		<li class="seccion5">A vivir en un medio ambiente sano y limpio y disfrutar del contacto con la naturaleza.</li>
+		<li class="seccion5">A participar activamente en la vida cultural de nuestra comunidad, a través de la música, 
+		la pintura, el teatro, el cine o cualquier medio de expresión.</li>
+		<li class="seccion5">A reunirnos con amigos para pensar proyectos juntos o intercambiar nuestras ideas.</li>
+		</ul>
+	</p>
+	<p class="content">
+		Hay mucho que podemos hacer en favor de nuestros derechos:
+		<ul class="content">
+		<li class="seccion5">Conocerlos y darlos a conocer en nuestra Patrulla y Unidad.</li>
+		<li class="seccion5">Recordarlos en todo momento, nada y nadie puede quitarnos un derecho, son nuestros ante 
+		cualquier cosa.</li>
+		<li class="seccion5">Hacerlos valer, si hay algo que nos parece que está en contra de nuestros derechos o 
+		sabemos de alguien que está pasando por una situación difícil, tenemos que pedir ayuda.</li>
+		</ul>
+	</p>
+	<p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>&nbsp;</p>
+	</div>
+	<script>
+		configureGestures("full_content","seccion_4.html","acerca_de.html");
+	</script>
+
+</body>
+</html>
