--- a/www/seccion_4.html
+++ b/www/seccion_4.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Ser Guía y Subguía de Patrulla</title>
 </head>
 
-<body class="seccion4">
+<body class="seccion4" onload="document.body.style.opacity='1'">
     <script type="text/javascript" src="js/hammer.min.js"></script>
     <script type="text/javascript" src="js/gestures.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
@@ -47,11 +47,11 @@
 		Al momento de elegir nuestra especialidad nos daremos cuenta de que varias de ellas se pueden 
 		agrupar en algo que llamamos <span class="importante4">Campos de Interés</span>. Son 5:
 		<ul class="content">
-		<li>Ciencia y Tecnología</li>
-		<li>Arte, Expresión y Cultura</li>
-		<li>Vida en la Naturaleza</li>
-		<li>Deporte</li>
-		<li>Servicio.</li>
+		<li class="seccion4">Ciencia y Tecnología</li>
+		<li class="seccion4">Arte, Expresión y Cultura</li>
+		<li class="seccion4">Vida en la Naturaleza</li>
+		<li class="seccion4">Deporte</li>
+		<li class="seccion4">Servicio</li>
 		</ul>
 	</p>
 	<p class="content">
