--- a/www/seccion_0.html
+++ b/www/seccion_0.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="initial-scale=1, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, minimum-scale=1, width=device-width" />
     <!-- This is a wide open CSP declaration. To lock this down for production, see below. -->
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <!-- Good default declaration:
@@ -23,7 +23,7 @@
     <title>Ser Guía y Subguía de Patrulla</title>
 </head>
 
-<body class="seccion0">
+<body class="seccion0"  onload="document.body.style.opacity='1'">
     <script type="text/javascript" src="js/hammer.min.js"></script>
     <script type="text/javascript" src="js/gestures.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
