--- a/www/seccion_5.html
+++ b/www/seccion_5.html
@@ -6,13 +6,13 @@
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=3, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
     <meta http-equiv="Content-Security-Policy" content="default-src * 'unsafe-inline'; style-src 'self' 'unsafe-inline'; media-src *" />
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Ser Guía y Subguía de Patrulla</title>
 </head>
 
-<body class="seccion5">
+<body class="seccion5" onload="document.body.style.opacity='1'">
     <script type="text/javascript" src="js/hammer.min.js"></script>
     <script type="text/javascript" src="js/gestures.js"></script>
 	<img class="title_img" src="img/img_seccion_5.png"/>
